--- a/NetCoreLearning/NetCoreLearning/appsettings.json
+++ b/NetCoreLearning/NetCoreLearning/appsettings.json
@@ -13,3 +13,26 @@
     }
   }
 }
+
+//logging filter Create filter rule in configuration
+//{
+//  "Logging": {
+//    "IncludeScopes": false,
+//    "Debug": {
+//      "LogLevel": {
+//        "Default": "Information"
+//      }
+//    },
+//    "Console": {
+//      "LogLevel": {
+//        "Microsoft.AspNetCore.Mvc.Razor.Internal": "Warning",
+//        "Microsoft.AspNetCore.Mvc.Razor.Razor": "Debug",
+//        "Microsoft.AspNetCore.Mvc.Razor": "Error",
+//        "Default": "Information"
+//      }
+//    },
+//    "LogLevel": {
+//      "Default": "Debug"
+//    }
+//  }
+//}
